--- a/CHANGES
+++ b/CHANGES
@@ -47,6 +47,7 @@ Version
   before ==>.
 - Fixed bug: events were not preserved in the initial transformation
   of the RHS in equivalence proofs.
+- Fixed bug in SArename that could cause an internal error.
 - Fixed bugs in probability counting: avoid counting spurious
   collisions of previous transformations in globaldepanal;
   do the proof of secrecy in one step to avoid counting twice the
